[tool.poetry]
name = "pyenvy"
version = "0.1.0"
description = "Tool for seamlessly integrating pyenv and poetry"
authors = ["PureFunctor <purefunctor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
coverage = "^5.2.1"
flake8 = "^3.8.3"
pre-commit = "^2.7.1"
pytest = "^6.0.1"
tox = "^3.20.0"

[tool.coverage.run]
source = ["pyenvy"]
omit = ["*tests*"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
